# apia-standard

./: CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  conftest.py  demo_agent.py  endpoint-health.json  health-trigger  pypi-test-trigger  pyproject.toml  registry.json  setup.py
.github/workflows/: ci.yml  claude-push.yml  health-now.yml  release.yml  test-pypi.yml  weekly-health.yml
apia/: __init__.py  __main__.py
cli/: apia.py
docs/: ALL_APIS.md  README.de.md  README.ru.md  README.zh.md  openapi-vs-apia.md
examples/: weather_demo.py
manifests/2gis/: apia.json
manifests/2gis-cis/: apia.json
manifests/abstract-api/: apia.json
manifests/adyen/: apia.json
manifests/airbnb/: apia.json
manifests/airtable/: apia.json
manifests/alpha-vantage/: apia.json
manifests/amadeus/: apia.json
manifests/amazon-sp-api/: apia.json
manifests/amocrm/: apia.json
manifests/anthropic/: apia.json
manifests/anthropic-claude-haiku/: apia.json
manifests/anthropic-claude-haiku-free/: apia.json
manifests/apollo-io/: apia.json
manifests/arxiv/: apia.json
manifests/assemblyai/: apia.json
manifests/attom/: apia.json
manifests/auth0/: apia.json
manifests/aviationstack/: apia.json
manifests/avito/: apia.json
manifests/avito-jobs/: apia.json
manifests/aws-comprehend/: apia.json
manifests/aws-iot/: apia.json
manifests/aws-lambda/: apia.json
manifests/aws-rekognition/: apia.json
manifests/aws-s3/: apia.json
manifests/bamboohr/: apia.json
manifests/binance/: apia.json
manifests/bitrix24/: apia.json
manifests/booking-com/: apia.json
manifests/brevo/: apia.json
manifests/carbon-interface/: apia.json
manifests/cbrf/: apia.json
manifests/cdek/: apia.json
schema/: apia-1.0.schema.json
tests/: test_manifests.py
tools/: check_endpoints.py  check_registry.py  openapi2apia.py
(+227 files in other folders)
